; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-test/extr_driver.c_t_printstr.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-test/extr_driver.c_t_printstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @t_printstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t_printstr(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @mrb_string_p(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i8* @RSTRING_PTR(i32 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @RSTRING_LEN(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @stdout, align 4
  %18 = call i32 @fwrite(i8* %15, i32 %16, i32 1, i32 %17)
  %19 = load i32, i32* @stdout, align 4
  %20 = call i32 @fflush(i32 %19)
  br label %21

21:                                               ; preds = %10, %2
  ret void
}

declare dso_local i64 @mrb_string_p(i32) #1

declare dso_local i8* @RSTRING_PTR(i32) #1

declare dso_local i32 @RSTRING_LEN(i32) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
